--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -1,33 +1,31 @@
 \section{Реализация}
 
 \subsubsection*{Анализатор:}
-Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript. Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
+В компании есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript. Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
 
-Этот граф передается в абстрактную машину, которая обычные переменные переводит в абстрактные, то есть принимающие множество возможных значений. На некоторые из них вешаются тэги, указывающие на потенциально опасные данные (source). Примером может быть пароль пользователя, sql запрос или открытие файла. Сами по себе эти переменные не являются уязвимостью. Однако если вывести пароль в консоль, или не закрыть файл, то будет плохо. Такие функции, как печать, являются стоком (sink), то есть местом, которые становятся проблемными, если до них доходит зараженная переменная. В итоге для каждого source, который дошел до sink, обратными шагами найдем весь путь уязвимости
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/engine.png}\hfill
+\end{figure}
 
-Есть еще такой вариант как незакрытый файл. В этом случае наоборот проверяем, что открытая переменная во всех путях исполнения дойдет до места закрытия. Итогом анализа будет репорт, указывающий на найденные уязвимости
-
-TODO : Картинка
-
-Реализован интерфейс для решёток, интервальная решетка для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
-
-
+Этот граф передается в абстрактную машину, которая обычные переменные переводит в абстрактные, то есть принимающие множество возможных значений. Далее применяется Taint анализ, и в результате для каждой уязвимости выводится весь путь
 
 \newpage
 \subsubsection*{Необходимо реализовать:}
+Реализован интерфейс для решёток, интервальная решетка для целых чисел и строковая решётка из JSAI, которую необходимо улучшить\\ \\
+В новой версии решетки должны присутствовать:
 \begin{itemize}
-    \item Структуру автоматона, функции для работы с ним
+    \item Структура автомата, функции для работы с ним
     \item Общие операции для решеток (join, meet, strictEquals, ...)
     \item Операции на строках (length, concat, substring, ...)
     \item Оператор замыкания (widening)
 \end{itemize}
-
-\subsubsection*{Дополнительные требования:}
+На существующем бенчмарке из 85 реальных проектов:
 \begin{itemize}
-    \item Есть тестовый датасет из 23 и 62 реальных проектов
-    \item Время исполнения не должно увеличиться более чем на $20\%$
+    \item Суммарное время анализа не должно увеличиться более чем на $20\%$
     \item Потребление памяти не должно увеличиться более чем на $10\%$
 \end{itemize}
+
+
 
 \newpage
 \subsection{Структура}
@@ -62,7 +60,7 @@ TODO : Картинка
 TODO ПРИМЕР С КАРТИНКАМИ
 
 \subsubsection*{explode}
-Для реализации сложных операций на строках, такие как Replace и Substr, в которых нужно искать подстроки в автоматах, есть операция, которая переводит автомат к конечному автомату с переходами по буквам. Она просто заменяет каждое ребро на путь, где на каждом переходе лишь один символ вместо целого слова. Также есть обратная операция, которая схлопывает пути в один переход
+Для реализации сложных операций на строках, такие как Replace и Substr, в которых нужно искать подстроки в автоматах, есть операция, которая переводит автомат к конечному автомату с переходами по буквам. Она просто заменяет каждое ребро на путь, где на каждом переходе лишь один символ вместо целого слова. Также есть обратная операция, которая схлопывает вершины с одним входящим и одним выходящим ребром в один переход
 
 \subsubsection*{getLanguage}
 Собираем все слова, порождаемые автоматом, с помощью прохода DFS. Если в графе есть цикл, то возможных слов бесконечно, и этот случай нужно отдельно разобрать. Эта операция полезна для оптимизаций в некоторых случаях (далее будет пример)
@@ -85,11 +83,15 @@ TODO ПРИМЕР С КАРТИНКАМИ
 \subsection{Операции на строках}
 \subsubsection*{Length}
 Возвращает интервал $[c_1, c_2]$, такой что $c_1 \leq |s| \leq c_2$. При этом если $s$ содержит в себе цикл, или же содержит в себе переход, на котором стоит $\top$, то есть любая строка, то максимальная длина будет сколь угодно большой. Минимальная при этом заменяет все топы на пустые строки
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-length.png}\hfill
-\end{figure}
+$$
+\text{length}(s) \triangleq 
+\begin{cases}
+[\lvert \text{minPath}(A) \rvert, +\infty] & \text{if } \text{cyclic}(A) \lor \text{readsTop}(A) \\
+[\lvert \text{minPath}(A) \rvert, \lvert \text{maxPath}(A) \rvert] & \text{otherwise}
+\end{cases}
+$$
 
-Для подсчета длины запускаем DFS из начальных стейтов. При вхождении в конечную, считаем длину пути (заменяя $\top$ на $0$ или $+\infty$ соответственно) и пересчитываем максимальную и минимальную длину
+Для подсчета длины запускаем DFS из начальных стейтов. При вхождении в терминальный, считаем длину пути (заменяя $\top$ на $0$ или $+\infty$ соответственно) и пересчитываем максимальную и минимальную длину
 
 Если автомат содержит в себе цикл, то с помощью DFS мы его найдем и максимальная длина пути будет бесконечной, так как можно по этому циклу крутиться сколь угодно много раз
 
@@ -99,9 +101,17 @@ TODO ПРИМЕР С КАРТИНКАМИ
 \newpage
 \subsubsection*{Contains}
 Абстрактная семантика contains должна возвращать значение true, если любая строка из A' содержится в любой строке из A, значение false, если какая-то строка из A' не содержится в какой-то строке из A и \{true, false\} ($\top$) в остальных случаях
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-contains.png}\hfill
-\end{figure}
+
+$$
+\text{contains}(s, s') \triangleq 
+\begin{cases}
+\text{false} & \text{if } A' \sqcap \text{FA}(A) = \text{Min}(\emptyset) \\
+\text{true} & \text{if } \neg \text{cyclic}(A) \land \text{singlePath}(A') \\
+& \land \forall \pi \in \text{paths}(A). \sigma_{sp} \curvearrowright_s \sigma_{\pi} \\
+\{ \text{true}, \text{false} \} & \text{otherwise}
+\end{cases}
+$$
+
 Для начала определим, в каком случае нужно возвращать false. Для этого определим фактор-автоматон FA(A), который принимает все подстроки A. Для этого нужно просто пометить все стейты конечными. Затем пересечь FA(A) и A', чтобы проверить, что никакая подстрока любой строки из A не является строкой из A'
 
 Теперь, в каком случае true. Если A' содержит 2 слова, ни одно из которых не является префиксом другого, то они оба не могут быть одновременно префиксами какого-либо слова из A. Значит все слова в A' должны быть по цепочке включены друг в друга. Или же автомат для них выглядит как путь, некоторые вершины на котором конечные. И в этом случае достаточно проверить, что самое длинное слово входит во все слова из A, тогда и его префиксы будут
@@ -109,37 +119,46 @@ TODO ПРИМЕР С КАРТИНКАМИ
 Во всех остальных случаях точного ответа нет, поэтому возвращаем $\top$
 
 \newpage
-\subsubsection*{IndexOf}
+\subsubsection*{Substr, Replace, IndexOf}
+Все 3 функции похожи друг на друга тем, что нужно искать в автомате подстроки по определенным условиям. И так как на переходах стоят не символы, а строки, то подстрока может заканчиваться или начианться где-то в середине этого перехода. Чтобы избежать такого, первым шагом вызывается explode, чтобы начало и конец всегда были в вершинах
 
-TODO СКЛЕИТЬ В ОДИН ПУНКТ indexOf, replace, substr
+Следующий шаг также общий, а именно обход графа в глубину и запоминание тех путей из начальных вершин в конечные, которые содержат в себе интересующую подстроку (это может быть вхождение подстроки в этот путь в случае Replace или indexOf, или же просто возможность взять подстроку нужной длины для Substr)
 
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-indexOf.png}\hfill
-\end{figure}
+А вот далее нужно полученные пути склеить в один автомат. Для этого добавляем одну общую начальную и конечную вершину, к ним присоединяем начала и концы путей, и затем минимизируем. Чтобы привести полученный автомат к сокращенному виду, а именно со словами на ребрах, делаем операцию обратную explode, то есть схлопываем вершины, у которых одно входящее и одно выходящее ребро. Получаем искомый автомат
 
-\newpage
-\subsubsection*{Substr}
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-substr.png}\hfill
-\end{figure}
+Есть сложность в том, что автомат может содержать в себе цикл. В этом случае обход в глубину не сможет вернуть все пути, так как их бесконечно много. И обрабатывать цикл на то, можно ли с его помощью накрутить подстроку, подходящую под условия, не получится из-за предпериода или еще одного цикла (какой сколько раз крутить непонятно). В случае с Substr можно обрезать пути по длине, но для indexOf и Replace так не получится. Поэтому в данном случае приходится возвращать $\top$
 
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-SB-algo.png}\hfill
-\end{figure}
+Вот краткое описание indexOf, более подробное описание всех операций можно найти в статье~\cite{tarsis2021}
 
+$$
+\text{indexOf}(s, s') \triangleq 
+\begin{cases}
+[-1, +\infty] & \text{if } \text{cyclic}(A) \lor \text{cyclic}(A') \lor \text{readsTop}(A') \\
+[-1, -1] & \text{if } \forall \sigma' \in \mathcal{L}(A') \text{ } \nexists \sigma \in \mathcal{L}(A). \sigma' \curvearrowright_s \sigma \\
+\underset{\sigma \in \mathcal{L}(A')}{\bigsqcup} \text{IO}(A, \sigma) & \text{otherwise}
+\end{cases}
+$$
 
-\newpage
-\subsubsection*{Replace}
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-replace.png}\hfill
-\end{figure}
+\subsection{Остальные операции}
+В статье TARSIS описан алгоритм только для 6 операций, тогда как на деле их гораздо больше. Часть из них похожа на описанные сверху, какие-то понятно как реализовывать. Но есть и более сложные. Разберем некоторые из них
 
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{images/tarsis-RP-algo.png}\hfill
-\end{figure}
+\subsubsection*{startsWith, endWith}
+Идем из начальных (или конечных в случае endWith) вершин, ища те переходы, чтобы путь совпадал с паттерном. Если не находим такого пути, значит точно false. Если оказывается, что путь нужной длины только один, значит true. Иначе $\top$
 
+\subsubsection*{charAt, slice, includes}
+Эти функции похожи на substr, аналогично шагаем по путям на нужную длину. В случае с charAt проверяем, что все символы на нужном месте одинаковые и равны нужному (true), либо что ни один не равен (false), в остальных случаях $\top$. Для slice вырезаем нужную часть автомата аналогично substr
 
+Includes аналогична indexOf, только нужно возвращать не индекс, а true/false
 
+\subsubsection*{trim, toUpperCase, pad, match}
+Первые 2 функции легко реализуются, нужно просто проделать операцию для каждого перехода. А вот pad и match сходу непонятно, как реализовывать для автоматов. Одной из проблем является например $\top$ ребро, которое не дает определить длину слова и непонятно, сколько символов вставлять в начало. И один из несложных вариантов реализации это выписать весь язык, порождаемый автоматом, для каждого слова по отдельности проделать операцию и склеить в один автомат. Такой подход все также плохо будет работать с циклами, то есть для цикличных автоматов возвращаем $\top$
+
+\subsubsection*{toNum, toBool}
+toBool проверяет то, есть ли в языке пустая строка или "0". Если нет, то true. Если язык состоит только из пустой строки или "0", то false, иначе $\top$
+
+toNum должен вернуть в результате интервальную решетку для чисел, то есть ограничение сверху и снизу на значение. И заодно проверить, что все строки состоят из корректных символов, то есть цифр, не более одной точки или запятой и возможно минус в начале. Также перебираем всевозможные пути, проверяем на корректность. Запоминаем минимальное и максимальное значение
+
+В случае с toNum $\top$ переход является недопустимым, так как это любой символ, в том числе буква. Но вот с циклами можно работать. Сначала нужно понять, находится ли эта часть строки после точки, или нет. Если нет, значит число может неограниченно расти и стремиться к $\pm \infty$. А для поиска минимального цикл нужно прокрутить только 1 раз. Если бесконечная часть появляется после точки, значит достаточно прибавить $0.1$ к числу и обрезать хвост, ибо в любом случае получим ограничение сверху
 
 \newpage
 \subsection{Оператор расширения}
@@ -297,10 +316,10 @@ console.log(x.indexOf("r")) // [number: [-1, -1]]
 
 \begin{lstlisting}[mathescape=true, caption={Еще пример IR тестов}]
 var x = "a" + document.getElementById('source').value + "c"
-console.log(x) // [string: a$\top$c tags=[XSS,WEB]]
-console.log(x.length) // [number: [2, +Inf]]
+console.log(x)                 // [string: a$\top$c tags=[XSS,WEB]]
+console.log(x.length)          // [number: [2, +Inf]]
 console.log(x.startsWith("a")) // [boolean: true]
-console.log(x.substr(0, 1)) // [string: a tags=[XSS,WEB]]
+console.log(x.substr(0, 1))    // [string: a tags=[XSS,WEB]]
 \end{lstlisting}
 
 В данном примере видно, что даже если в операциях участвует $\top$, все еще можно знать что-то о строке, как напимер минимальную длину или то, что startsWith('a') это всегда true
@@ -310,7 +329,17 @@ console.log(x.substr(0, 1)) // [string: a tags=[XSS,WEB]]
 
 \newpage
 \subsection{Результаты}
-В результате первого запуска анализатора с встроенной новой строковой решеткой на реальных проектах, время исполнения увеличилось суммарно вдвое. В зависимости от проекта увеличение составило от 10\% до 300\%
+Для подсчета итоговой статистики были произведены запуски анализатора с использованием старой и новой решеток на внутренних тестовых проектах, а также на Open Surce JavaScript проектах для парсинга текстов и сериализации, то есть те, где большое использование строковых переменных в коде 
 
-TODO табличка, замеры точности
+Разберем результаты на примере 3-х различных по размеру проектов:
 
+\subsubsection*{SceneBoard}
+Самый большой проект в пуле тестовых. Размер 250к строк. Время анализа составило 506к ms (8 минут 26 секунд) на старой решетке и 526к ms (8:46) на новой, то есть прирост 4\%. Потребление памяти было 17935 МБ на старой и 16706 МБ на новой, то есть уменьшилось на 7\%. Снижение обусловлено тем, что благодаря повышению точности было проигнорировано больше строчек кода, так как он мертвый, то есть никогда не запускается в реальности. Замеры точности можно увидеть в табличке снизу
+
+TODO табличка
+
+\subsubsection*{Notepad}
+
+\subsubsection*{AppGalery}
+
+\subsubsection*{Open Source}
