--- a/thesis/items/theory/static_analyzis.tex
+++ b/thesis/items/theory/static_analyzis.tex
@@ -20,7 +20,7 @@
 
 \subsubsection*{Основные применения}
 \begin{itemize}
-    \item Поиск уязвимостей (CWE, OWASP Top 10)
+    \item Поиск уязвимостей
     \item Оптимизация кода
     \item Верификация свойств
     \item Генерация тестов
