--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -38,6 +38,8 @@
 \usepackage{array} % Для таблиц
 \usepackage{booktabs} % Для улучшенных таблиц
 
+\usepackage{amsmath}
+
 % Настройка стиля примера кода
 \newtcolorbox{codebox}{
     colback=white,
