--- a/thesis/items/theory/string.tex
+++ b/thesis/items/theory/string.tex
@@ -28,10 +28,26 @@ if (s.length == 0) {
 let repeats = 100 / str.length;
 \end{lstlisting}
 
-В статьях чаще всего упоминаются ещё 3 строковых решетки, обладающих большей точностью
+В статьях чаще всего упоминаются ещё 3 строковых решетки
 
-\subsubsection*{The abstract length string domain}
-Эта решетка запоминает минимальную и максимальную длину строк, которые может принимать абстрактное значение. Для примера выше она отлично подойдет, так как запомнит, что минимальная длина 3, а максимальная 4, и даже сможет верно вернуть значение для repeats. Однако для других операций, таких как substr или charAt, точности не будет хватать
+\subsubsection*{The Abstract Length string domain}
+Домен длины абстрактной строки (LS) запоминает минимальную и максимальную длину строк, которые может принимать абстрактное значение. Например
+$$LS("foo"; "bark") = [3, 4] $$
+Для примера выше она отлично подойдет, так как запомнит, что минимальная длина 3, а максимальная 4, и даже сможет верно вернуть значение для repeats, то есть интервал [25, 34]. Однако для других операций, таких как substr или charAt, она не годится
+
+\subsubsection*{The Character Inclusion domain}
+Домен включения символов (CI) отслеживает символы, встречающиеся в строке. Каждая абстрактная строка имеет вид [L, U]. Нижняя граница L содержит символы, которые должны встречаться в конкретной строке (строках), в то время как верхняя граница U представляет символы, которые могут появиться
+
+Этот домен полностью игнорирует структуру конкретных строк, которые аппроксимирует. То есть например 
+
+$$CI("foo") = CI("of") = [\{'f', 'o'\}, \{'f', 'o'\}]$$
+
+Но CI, как правило, дешев в вычислительном отношении и иногда предоставляет очень полезную информацию
+
+\subsubsection*{The Prefix-Suffix domain}
+Элементами префикс-суффикс домена (PS) являются пары $[p, s]$, содержащие в себе все строки, которые начинаются с p и заканчиваются на s
+
+\[PS("abacab"; "abab") = ["aba"; "ab"]\]
 
 
 
